[ticket/12911] Fix alignment
PHPBB3-12911

--- a/phpBB/styles/prosilver/theme/content.css
+++ b/phpBB/styles/prosilver/theme/content.css
@@ -32,24 +32,41 @@ ul.topiclist dt, ul.topiclist dd {
 
 ul.topiclist dt {
 	width: 100%;
-	margin-right: -440px;
+	margin-right: -486px;
 	font-size: 1.1em;
 }
 
+
+ul.topiclist.attachments dt {
+	margin-right: -440px;
+}
+
 ul.topiclist.missing-column dt {
-	margin-right: -345px;
+	margin-right: -376px;
+}
+
+ul.topiclist.drafts dt, ul.topiclist.missing-column .header dt {
+	margin-right: -330px;
 }
 
 ul.topiclist.two-long-columns dt {
-	margin-right: -250px;
+	margin-right: -296px;
 }
 
 ul.topiclist.two-columns dt {
+	margin-right: -126px;
+}
+
+.notification_list ul.topiclist.two-columns dt {
 	margin-right: -80px;
 }
 
+ul.topiclist.two-columns .header dt {
+	margin-right: -83px;
+}
+
 ul.topiclist dt .list-inner {
-	margin-right: 440px;
+	margin-right: 486px;
 	padding-left: 5px;
 	padding-right: 5px;
 }
