--- a/phpBB/styles/prosilver/theme/responsive.css
+++ b/phpBB/styles/prosilver/theme/responsive.css
@@ -132,10 +132,10 @@ ul.topiclist dd.mark {
 /* Forums and topics lists
 ----------------------------------------*/
 ul.topiclist.forums dt {
-	margin-right: -250px;
+	margin-right: -296px;
 }
 ul.topiclist.forums dt .list-inner {
-	margin-right: 250px;
+	margin-right: 296px;
 }
 
 ul.topiclist.forums dd.lastpost {
@@ -164,11 +164,11 @@ ul.topiclist.forums dd.topics dfn, ul.topiclist.topics dd.posts dfn {
 @media only screen and (max-width: 550px), only screen and (max-device-width: 550px)
 {
 	ul.topiclist.forums dt {
-		margin-right: 0;
+		margin-right: -46px;
 	}
 
 	ul.topiclist.forums dt .list-inner {
-		margin-right: 0;
+		margin-right: 46px;
 	}
 
 	ul.topiclist.forums dd.lastpost {
